syntax = "proto3";

package energy;

// Live telemetry reading streamed every 50ms
message TelemetryReading {
  // Power metrics
  double power_watts = 1;                    // Current power draw in watts (-1 if unavailable)
  
  // Energy metrics
  double energy_joules = 2;                  // Accumulated energy since baseline (-1 if unavailable)
  
  // Temperature metrics
  double temperature_celsius = 3;            // GPU temperature (-1 if unavailable)
  
  // Memory metrics (instantaneous)
  double gpu_memory_usage_mb = 4;            // Current GPU memory usage in MB (-1 if unavailable)
  double cpu_memory_usage_mb = 5;            // Current system memory usage in MB (-1 if unavailable)
  
  // Metadata
  string platform = 6;                       // "nvidia", "macos", or "null"
  int64 timestamp_nanos = 7;                 // Unix timestamp in nanoseconds

  // System information (from /health endpoint)
  SystemInfo system_info = 8;
  GpuInfo gpu_info = 9;  // Empty if no GPU
}

// System information (same as /health endpoint)
message SystemInfo {
  string os_name = 1;          // Empty string if unavailable
  string os_version = 2;       // Empty string if unavailable
  string kernel_version = 3;   // Empty string if unavailable
  string host_name = 4;        // Empty string if unavailable
  uint32 cpu_count = 5;        // 0 if unavailable
  string cpu_brand = 6;        // Empty string if unavailable
}

message GpuInfo {
  string name = 1;         // Empty string if no GPU
  string vendor = 2;       // Empty string if no GPU
  uint64 device_id = 3;    // 0 if no GPU
  string device_type = 4;  // Empty string if no GPU
  string backend = 5;      // Empty string if no GPU
}

// Service definition - one-way broadcast only
service EnergyMonitor {
  // Health check
  rpc Health(HealthRequest) returns (HealthResponse);
  
  // Live telemetry stream (50ms intervals) - always broadcasting everything
  rpc StreamTelemetry(StreamRequest) returns (stream TelemetryReading);
}

// Request/Response messages
message HealthRequest {}
message HealthResponse {
  bool healthy = 1;
  string platform = 2;
}

message StreamRequest {}  // No parameters - always 50ms intervals